--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,11 +1,11 @@
 $(document).ready(function(){
-  var locations = $('#visited_airports').data('airports');
-  var waypoints = $('#visited_waypoints').data('waypoints');
-  var trips = $('#trip_lines').data('trips');
-
-  if(Object.keys(locations).length < 1){
-    var mymap = L.map('mapid').setView([40.714216, -73.998817], 13);
-  } else {
+  // var locations = $('#visited_airports').data('airports');
+  // var waypoints = $('#visited_waypoints').data('waypoints');
+  // var trips = $('#trip_lines').data('trips');
+  //
+  // if(Object.keys(locations).length < 1){
+    // var mymap = L.map('mapid').setView([40.714216, -73.998817], 13);
+  // } else {
     var waypointIcon = L.icon({
       iconUrl: "<%= asset_path('waypoint.png') %>",
 
@@ -23,31 +23,44 @@ $(document).ready(function(){
     });
 
     var mymap = L.map('mapid');
+    var geoJsonLayer = <%= Flight.map_data.to_json %>
+    // var flightsLayer = L.geoJSON(geoJsonLayer, {
+    //     style: function(feature) {
+    //         switch (feature.properties.party) {
+    //             case 'Republican': return {color: "#ff0000"};
+    //             case 'Democrat':   return {color: "#0000ff"};
+    //         }
+    //     }
+    // }).addTo(mymap);
 
-    var markers = [];
-    for(var key in waypoints) {
-      var waypoint = L.marker([waypoints[key][0], waypoints[key][1]], {title: key, icon: waypointIcon}).addTo(mymap);
-      markers.push(waypoint);
-    }
-    for (var key in locations) {
-      var pinCount = locations[key][1]
-      var marker = L.marker([locations[key][0][0], locations[key][0][1]], {title: key, opacity:0.4+(pinCount/100), icon: airportIcon}).addTo(mymap);
-      markers.push(marker);
-    }
+    var flightsLayer = L.geoJSON().addTo(mymap);
+    flightsLayer.addData(geoJsonLayer);
+    mymap.fitBounds(flightsLayer.getBounds());
 
-    for (var i = 0; i < trips.length; i++) {
-      if (trips[i].length >= 2) {
-        var polylinePoints = [];
-        for(var j = 0; j < trips[i].length; j++) {
-          polylinePoints.push(trips[i][j]);
-        }
-        var polyline = L.polyline(polylinePoints, {color:'#00E6F0', opacity:0.15}).addTo(mymap);
-      }
-    }
+    // var markers = [];
+    // for(var key in waypoints) {
+    //   var waypoint = L.marker([waypoints[key][0], waypoints[key][1]], {title: key, icon: waypointIcon}).addTo(mymap);
+    //   markers.push(waypoint);
+    // }
+    // for (var key in locations) {
+    //   var pinCount = locations[key][1]
+    //   var marker = L.marker([locations[key][0][0], locations[key][0][1]], {title: key, opacity:0.4+(pinCount/100), icon: airportIcon}).addTo(mymap);
+    //   markers.push(marker);
+    // }
+    //
+    // for (var i = 0; i < trips.length; i++) {
+    //   if (trips[i].length >= 2) {
+    //     var polylinePoints = [];
+    //     for(var j = 0; j < trips[i].length; j++) {
+    //       polylinePoints.push(trips[i][j]);
+    //     }
+    //     var polyline = L.polyline(polylinePoints, {color:'#00E6F0', opacity:0.15}).addTo(mymap);
+    //   }
+    // }
 
-    var placeMarks = new L.featureGroup(markers);
-    mymap.fitBounds(placeMarks.getBounds().pad(0.1));
-  }
+    // var placeMarks = new L.featureGroup(markers);
+    // mymap.fitBounds(placeMarks.getBounds().pad(0.1));
+  // }
 
   // MapBox Dark Map (Costs money after 50,000 impressions)
     L.tileLayer('https://api.mapbox.com/styles/v1/ericavirtue/cj68pt4dw1lhh2rl564465xca/tiles/256/{z}/{x}/{y}?access_token={accessToken}', {
