--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,72 +1,42 @@
 $(document).ready(function(){
-  // var locations = $('#visited_airports').data('airports');
-  // var waypoints = $('#visited_waypoints').data('waypoints');
-  // var trips = $('#trip_lines').data('trips');
-  //
-  // if(Object.keys(locations).length < 1){
-    // var mymap = L.map('mapid').setView([40.714216, -73.998817], 13);
-  // } else {
-    var waypointIcon = L.icon({
-      iconUrl: "<%= asset_path('waypoint.png') %>",
+  var waypointIcon = L.icon({
+    iconUrl: "<%= asset_path('waypoint.png') %>",
+    iconSize:     [50, 50], // size of the icon
+    iconAnchor:   [25, 25], // point of the icon which will correspond to marker's location
+    popupAnchor:  [-3, -76], // point from which the popup should open relative to the iconAnchor
+  });
 
-      iconSize:     [50, 50], // size of the icon
-      iconAnchor:   [25, 25], // point of the icon which will correspond to marker's location
-      popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
-    });
+  var airportIcon = L.icon({
+    iconUrl: "<%= asset_path('airport.png') %>",
+    iconSize:     [50, 50],
+    iconAnchor:   [25, 25],
+    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+  });
 
-    var airportIcon = L.icon({
-      iconUrl: "<%= asset_path('airport.png') %>",
+  var lineStyle = {
+    color:'#00E6F0',
+    opacity:0.15
+  }
 
-      iconSize:     [50, 50],
-      iconAnchor:   [25, 25],
-      popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
-    });
+  var mymap = L.map('mapid', {renderer: L.canvas()});
+  var geoJsonLayer = <%= Flight.map_data.to_json %>
 
-    var mymap = L.map('mapid');
-    var geoJsonLayer = <%= Flight.map_data.to_json %>
-    // var flightsLayer = L.geoJSON(geoJsonLayer, {
-    //     style: function(feature) {
-    //         switch (feature.properties.party) {
-    //             case 'Republican': return {color: "#ff0000"};
-    //             case 'Democrat':   return {color: "#0000ff"};
-    //         }
-    //     }
-    // }).addTo(mymap);
-
-    var flightsLayer = L.geoJSON().addTo(mymap);
-    flightsLayer.addData(geoJsonLayer);
-    mymap.fitBounds(flightsLayer.getBounds());
-
-    // var markers = [];
-    // for(var key in waypoints) {
-    //   var waypoint = L.marker([waypoints[key][0], waypoints[key][1]], {title: key, icon: waypointIcon}).addTo(mymap);
-    //   markers.push(waypoint);
-    // }
-    // for (var key in locations) {
-    //   var pinCount = locations[key][1]
-    //   var marker = L.marker([locations[key][0][0], locations[key][0][1]], {title: key, opacity:0.4+(pinCount/100), icon: airportIcon}).addTo(mymap);
-    //   markers.push(marker);
-    // }
-    //
-    // for (var i = 0; i < trips.length; i++) {
-    //   if (trips[i].length >= 2) {
-    //     var polylinePoints = [];
-    //     for(var j = 0; j < trips[i].length; j++) {
-    //       polylinePoints.push(trips[i][j]);
-    //     }
-    //     var polyline = L.polyline(polylinePoints, {color:'#00E6F0', opacity:0.15}).addTo(mymap);
-    //   }
-    // }
-
-    // var placeMarks = new L.featureGroup(markers);
-    // mymap.fitBounds(placeMarks.getBounds().pad(0.1));
-  // }
+  var flightsLayer = L.geoJSON(geoJsonLayer, {
+    style: lineStyle,
+    pointToLayer: function (feature, latlng) {
+      if (feature.properties.feature_type === "airport") {
+        return L.marker(latlng, {title: feature.properties.popupContent, opacity: 0.15, icon: airportIcon});
+      } else if (feature.properties.feature_type === "waypoint") {
+        return L.marker(latlng, {title: feature.properties.popupContent, opacity: 0.3, icon: waypointIcon});
+      }
+    }
+  }).addTo(mymap);
+  mymap.fitBounds(flightsLayer.getBounds());
 
   // MapBox Dark Map (Costs money after 50,000 impressions)
-    L.tileLayer('https://api.mapbox.com/styles/v1/ericavirtue/cj68pt4dw1lhh2rl564465xca/tiles/256/{z}/{x}/{y}?access_token={accessToken}', {
-        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-        maxZoom: 18,
-        accessToken: 'pk.eyJ1IjoiYXJlbGVuZ2xpc2giLCJhIjoiY2l6ZzNrNHZ3MDB1cDMzb3dqdmh3emhjbSJ9.1WoDWsWNnIg-Wq8LPf1j-A'
-    }).addTo(mymap);
-
+  L.tileLayer('https://api.mapbox.com/styles/v1/ericavirtue/cj68pt4dw1lhh2rl564465xca/tiles/256/{z}/{x}/{y}?access_token={accessToken}', {
+      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+      maxZoom: 18,
+      accessToken: 'pk.eyJ1IjoiYXJlbGVuZ2xpc2giLCJhIjoiY2l6ZzNrNHZ3MDB1cDMzb3dqdmh3emhjbSJ9.1WoDWsWNnIg-Wq8LPf1j-A'
+  }).addTo(mymap);
 });
