--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -20,14 +20,22 @@ $(document).ready(function(){
 
   var mymap = L.map('mapid', {renderer: L.canvas()});
   var geoJsonLayer = <%= Flight.map_data.to_json %>
+  var max_count = geoJsonLayer["max_count"];
 
   var flightsLayer = L.geoJSON(geoJsonLayer, {
     style: lineStyle,
     pointToLayer: function (feature, latlng) {
       if (feature.properties.feature_type === "airport") {
-        return L.marker(latlng, {title: feature.properties.popupContent, opacity: 0.15, icon: airportIcon});
+        return L.marker(latlng, {
+          title: feature.properties.popupContent,
+          opacity: Math.max((feature.properties.count/max_count) * 12, 0.3),
+          icon: airportIcon
+        });
       } else if (feature.properties.feature_type === "waypoint") {
-        return L.marker(latlng, {title: feature.properties.popupContent, opacity: 0.3, icon: waypointIcon});
+        return L.marker(latlng, {
+          title: feature.properties.popupContent,
+          opacity: Math.max((feature.properties.count/max_count) * 12, 0.3),
+          icon: waypointIcon});
       }
     }
   }).addTo(mymap);
