--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,5 +1,6 @@
 $(document).ready(function(){
   var whichPage = $('#current_page').data('page');
+  var basePath = window.location.protocol + "//" + window.location.host
 
   var waypointIcon = L.icon({
     iconUrl: "<%= asset_path('waypoint.png') %>",
@@ -22,36 +23,41 @@ $(document).ready(function(){
 
   var mymap = L.map('mapid', {renderer: L.canvas()});
   if (whichPage === "homepage") {
-    var geoJsonLayer = <%= Flight.map_data(Flight).to_json %>
+    $.getJSON( basePath + "/api/v1/flights", function( data ) {
+      renderMap(data);
+    });
   } else {
-    console.log(whichPage);
-    var geoJsonLayer = <%= Flight.map_data(User.find(1).flights).to_json || nil %>
+    $.getJSON( basePath + "/api/v1/users/" + whichPage + "/flights", function( data ) {
+      renderMap(data);
+    }); // /api/v1/users/whichPage/flights
   }
-  var max_count = geoJsonLayer["max_count"];
 
-  var flightsLayer = L.geoJSON(geoJsonLayer, {
-    style: lineStyle,
-    pointToLayer: function (feature, latlng) {
-      if (feature.properties.feature_type === "airport") {
-        return L.marker(latlng, {
-          title: feature.properties.identifier,
-          opacity: Math.max((feature.properties.count/max_count) * 12, 0.3),
-          icon: airportIcon
-        });
-      } else if (feature.properties.feature_type === "waypoint") {
-        return L.marker(latlng, {
-          title: feature.properties.identifier,
-          opacity: Math.max((feature.properties.count/max_count) * 12, 0.4),
-          icon: waypointIcon});
+  function renderMap(data) {
+    var max_count = data["max_count"];
+    var flightsLayer = L.geoJSON(data, {
+      style: lineStyle,
+      pointToLayer: function (feature, latlng) {
+        if (feature.properties.feature_type === "airport") {
+          return L.marker(latlng, {
+            title: feature.properties.identifier,
+            opacity: Math.max((feature.properties.count/max_count) * 12, 0.3),
+            icon: airportIcon
+          });
+        } else if (feature.properties.feature_type === "waypoint") {
+          return L.marker(latlng, {
+            title: feature.properties.identifier,
+            opacity: Math.max((feature.properties.count/max_count) * 12, 0.4),
+            icon: waypointIcon});
+        }
       }
-    }
-  }).addTo(mymap);
-  mymap.fitBounds(flightsLayer.getBounds());
+    }).addTo(mymap);
+    mymap.fitBounds(flightsLayer.getBounds());
 
-  // MapBox Dark Map (Costs money after 50,000 impressions)
-  L.tileLayer('https://api.mapbox.com/styles/v1/ericavirtue/cj68pt4dw1lhh2rl564465xca/tiles/256/{z}/{x}/{y}?access_token={accessToken}', {
-      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-      maxZoom: 18,
-      accessToken: 'pk.eyJ1IjoiYXJlbGVuZ2xpc2giLCJhIjoiY2l6ZzNrNHZ3MDB1cDMzb3dqdmh3emhjbSJ9.1WoDWsWNnIg-Wq8LPf1j-A'
-  }).addTo(mymap);
+    // MapBox Dark Map (Costs money after 50,000 impressions)
+    L.tileLayer('https://api.mapbox.com/styles/v1/ericavirtue/cj68pt4dw1lhh2rl564465xca/tiles/256/{z}/{x}/{y}?access_token={accessToken}', {
+        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+        maxZoom: 18,
+        accessToken: 'pk.eyJ1IjoiYXJlbGVuZ2xpc2giLCJhIjoiY2l6ZzNrNHZ3MDB1cDMzb3dqdmh3emhjbSJ9.1WoDWsWNnIg-Wq8LPf1j-A'
+    }).addTo(mymap);
+  }
 });
