--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -23,13 +23,16 @@ $(document).ready(function(){
 
   var mymap = L.map('mapid', {renderer: L.canvas()});
   if (whichPage === "homepage") {
-    $.getJSON( basePath + "/api/v1/flights", function( data ) {
+    // $.getJSON( basePath + "/api/v1/flights", function( data ) {
+    //   renderMap(data);
+    // });
+    $.getJSON( basePath + "/api/v1/users/64/flights", function( data ) {
       renderMap(data);
     });
   } else {
     $.getJSON( basePath + "/api/v1/users/" + whichPage + "/flights", function( data ) {
       renderMap(data);
-    }); // /api/v1/users/whichPage/flights
+    });
   }
 
   function renderMap(data) {
