--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,23 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <%= link_to 'ARELPLANE', root_path, class: 'navbar-brand' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <%= link_to 'MANAGE FLIGHTS', flights_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item active">
-          <%= link_to 'LOG OUT', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <% if @user == current_user %>
-          <li class="nav-item active">
-            <button href="#" data-toggle='modal' data-target='#logbookUploadModal' class='btn btn-primary'>Upload Logbook</button>
-          </li>
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <% if current_user %>
+        <%= link_to 'MANAGE FLIGHTS', flights_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item active">
+        <%= link_to 'LOG OUT', destroy_user_session_path, method: :delete, class: 'nav-link' %>
         <% end %>
-      </ul>
-    </div>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <% if current_user %>
+        <li class="nav-item active">
+          <button href="#" data-toggle='modal' data-target='#logbookUploadModal' class='btn btn-primary'>Upload Logbook</button>
+        </li>
+      <% else %>
+        <li class="nav-item active">
+          <a href="#" data-toggle='modal' data-target='#loginModal'>Login</a>
+          <%= link_to "register", new_user_registration_path, class: 'btn btn-primary' %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
 </nav>
