--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,10 @@
   </head>
 
   <body>
-    <% if current_user %>
-      <%= render 'layouts/navbar' %>
-    <% end %>
+    <%= render 'layouts/navbar' %>
     <%= render 'layouts/fb_messenger_btn' %>
     <%= render 'layouts/flash_messages' %>
     <%= yield %>
+    <%= render 'pages/login_modal' %>
   </body>
 </html>
