--- a/app/views/users/_side_bar.html.erb
+++ b/app/views/users/_side_bar.html.erb
@@ -39,7 +39,7 @@
   <div class='col-12'>
     <div class='float-right mr-3'>
       <div class='light-header align-right'>
-        <%= @user.top_aircraft || 'No Flights' %>
+        <%= @user.top_aircraft || 'Nothing Yet' %>
       </div>
       <div class='light-sub-text align-right'>
         Top Aircraft
@@ -55,7 +55,7 @@
         <div class='row mt-3'>
           <div class='col-6'>
             <div class='header-text'>
-              <%= @user.flights.count || 'No Flights' %>
+              <%= number_with_delimiter(@user.flights.count, delimiter: ',') || 'No Flights' %>
             </div>
             <div class='sub-text'>
               Flights
@@ -63,7 +63,7 @@
           </div>
           <div class='col-6'>
             <div class='header-text'>
-              <%= @user.num_airports %>
+              <%= number_with_delimiter(@user.num_airports, delimiter: ',') %>
             </div>
             <div class='sub-text'>
               Airports
@@ -73,7 +73,7 @@
         <div class='row'>
           <div class='col-6'>
             <div class='header-text'>
-              <%= @user.total_flight_hours %>
+              <%= number_with_delimiter(@user.total_flight_hours, delimiter: ',') %>
             </div>
             <div class='sub-text'>
               Hours
@@ -81,7 +81,7 @@
           </div>
           <div class='col-6'>
             <div class='header-text'>
-              <%= @user.num_regions %>
+              <%= number_with_delimiter(@user.num_regions, delimiter: ',') %>
             </div>
             <div class='sub-text'>
               Regions
